# IronLogicSimulator

./: .gitignore  CMakeLists.txt  Classes.h  CoreCircuit.h  Geometry.h  Iron.h  README.md  Script.h  Signal.h  Simulator.h  notes
assets/lang/: en_US.lang
cmake-modules/: FindSFML.cmake
cmake_modules/: FindLog4cxx.cmake  FindSFML.cmake
include/: Args.h  Console.h  CoreCircuit.h  Errors.h  Script.h  Signal.h  Simulator.h  Version.h
scripts/: and.fes  or.fes  xor.fes
src/: Console.cpp  Main.cpp  Signal.cpp  Simulator.cpp
